Added .git to repo url

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ license=MIT
 sentence=A library that implements PASV FTP
 paragraph=This library has one class, ParticleFTPClient that implements most FTP commands. It supports PASV mode (which the server must also support.)
 url=https://github.com/jychuah/ParticleFtpClient
-repository=https://github.com/jychuah/ParticleFtpClient
+repository=https://github.com/jychuah/ParticleFtpClient.git
