--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 # Fill in information about your library then remove # from the start of lines
 # https://docs.particle.io/guide/tools-and-features/libraries/#library-properties-fields
-name=ParticleFTPClient
+name=ParticleFtpClient
 version=0.0.3
 author=Joon-Yee Chuah
 license=MIT
 sentence=A library that implements PASV FTP
-paragraph=This library has one class, ParticleFTPClient that implements most FTP commands. It supports PASV mode (which the server must also support.)
+#paragraph=This library has one class, ParticleFTPClient that implements most FTP commands. It supports PASV mode, which the server must also support.
 url=https://github.com/jychuah/ParticleFtpClient
 repository=https://github.com/jychuah/ParticleFtpClient.git
